--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.6",
+    "react-uuid": "^2.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
